--- a/introduction_to_liner_algebra.ipynb
+++ b/introduction_to_liner_algebra.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfKMqkJ0kPVAgQekiszAQo",
+      "authorship_tag": "ABX9TyO9vhB9Ldes61/GbAG7IexK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -968,6 +968,445 @@
           },
           "metadata": {},
           "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Orthogonal Vector"
+      ],
+      "metadata": {
+        "id": "Ud6IHs7Js-BM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "i = np.array([1,0])\n",
+        "i"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Sh_td9qotCgt",
+        "outputId": "b0701f1a-9e3c-407c-ea1d-c2312c10fcd0"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 52
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "j = np.array([0,1])\n",
+        "j"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jduT_ln3tI0F",
+        "outputId": "9a2273c6-e7ee-4cf4-d717-1a175b5fd043"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.dot(i,j)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "czCx7Su0tNXs",
+        "outputId": "77618e98-46d0-494c-f2f4-d647b3954d04"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 54
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Matrices (Rank 2 Tensor)"
+      ],
+      "metadata": {
+        "id": "6NwYyjSFwqom"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = np.array([[1,2],[3,4],[5,6]])\n",
+        "X"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jAIWby-fwvON",
+        "outputId": "0a307a5a-d717-4ff6-f236-3ac2a73fff31"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2],\n",
+              "       [3, 4],\n",
+              "       [5, 6]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OjU1fNsfxD0X",
+        "outputId": "a1b36864-bad2-47e3-c5cc-f4b804e775df"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X[:,0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_iFNeDMZxINj",
+        "outputId": "5de75c00-3343-4dd7-8c97-4ba796e60790"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 3, 5])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X[1,:]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o4kWvQ5ZxN2S",
+        "outputId": "02e7da23-09f7-4cfb-8d7e-9b1e5ce61f6a"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X[0:2,0:2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WZuZ7zQixsCZ",
+        "outputId": "5536aa79-bb03-4e22-ae0c-d255430d1084"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 2],\n",
+              "       [3, 4]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PyTorch"
+      ],
+      "metadata": {
+        "id": "AGha7h0wyQB4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_ts = torch.tensor([[12,21],[23,32],[34,43]])\n",
+        "X_ts"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6sbOQx8_yRsQ",
+        "outputId": "5c1bd9a4-bc6d-4cfb-a022-b6b0befd66e4"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[12, 21],\n",
+              "        [23, 32],\n",
+              "        [34, 43]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_ts.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oT2PPxmtymW0",
+        "outputId": "fc75ace7-e46d-4961-a16c-ef846f2cb641"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([3, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_ts[:,0]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xu5hf9Xaypnm",
+        "outputId": "2ad6297b-cf81-4165-b135-23e8e99138d5"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([12, 23, 34])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tesorflow"
+      ],
+      "metadata": {
+        "id": "A_8lOakNzFw5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_tf = tf.Variable([[1,2],[3,4],[5,6]])\n",
+        "X_tf"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6Zw0YWeUzJ3K",
+        "outputId": "78caa0ce-40a8-4c07-d36d-e6c9588beb3b"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Variable 'Variable:0' shape=(3, 2) dtype=int32, numpy=\n",
+              "array([[1, 2],\n",
+              "       [3, 4],\n",
+              "       [5, 6]], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.rank(X_tf)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PCTIMxSmzXJb",
+        "outputId": "c9f3f479-ace2-4166-f270-1225bd32e37e"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(), dtype=int32, numpy=2>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tf.shape(X_tf)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bfwtRFz0zfcz",
+        "outputId": "4dad69a2-4321-401e-d66c-fc774885f6d5"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2,), dtype=int32, numpy=array([3, 2], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_tf[:,1]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v0swLTkOzorf",
+        "outputId": "10d9e7f0-7b27-4e6c-a87f-bf285de58053"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(3,), dtype=int32, numpy=array([2, 4, 6], dtype=int32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
         }
       ]
     }
