--- a/introduction_to_liner_algebra.ipynb
+++ b/introduction_to_liner_algebra.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9vhB9Ldes61/GbAG7IexK",
+      "authorship_tag": "ABX9TyPWoYJ/BiG/M2/8duVo72GQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -171,7 +171,7 @@
       "metadata": {
         "id": "J75hp10nsVR6"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -1409,6 +1409,37 @@
           "execution_count": 68
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Generic Tensor"
+      ],
+      "metadata": {
+        "id": "9PLOzQl0FhOi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "images_pt = torch.zeros([32,28,28,2])"
+      ],
+      "metadata": {
+        "id": "VhrhAWfdFkCW"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# images_pt"
+      ],
+      "metadata": {
+        "id": "rcCmpXwzGH3c"
+      },
+      "execution_count": 7,
+      "outputs": []
     }
   ]
 }
